# FR3Setup

./: .gitignore  .gitmodules  README.md  fr3_pose_publisher.py  pose_publisher.ipynb  setup.cfg
FR3Setup/: README.md
camera_calibration/: README.md  generate_launch_file.py
docs/source/: conf.py  index.md
docs/source/camera_calibration/: index.md  moveit.md  post_process.md
docs/source/camera_setup/: index.md
docs/source/network/: index.md
docs/source/prerequisites/: index.md
docs/source/vicon_setup/: index.md
fr3_gripper/src/: gripper.cpp
fr3_pose_publisher/: CMakeLists.txt  README.md  fr3_pose_publisher.py
fr3_pose_publisher/include/: read_fr3_state.h
fr3_pose_publisher/src/: read_fr3_state.cpp
fr3_pose_publisher/srcpy/: demo_pose_publisher.py  fr3_pose_publisher.py
fr3_ros_workflow/: APRILTAG.md  CAMERASETUP.md  INSTALLATION.md  README.md  REALSENSE.md  ROSSETUP.md  Readme.md  VICONSETUP.md  installation.md
network_setting/: README.md
